# DjangoSimpleBlog

./: .gitignore  .prettierignore  README.md  db.sqlite3  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_blog_title_alter_blog_text.py
config/: settings.py  urls.py
jstools/: package-lock.json  package.json  tailwind.config.js
static/css/: style.css
templates/: base.html  login.html  logout.html  navi.html
templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form_create.html  blog_form_update.html  blog_list.html
