[tool.poetry]
name = "DjangoSimpleBlog"
version = "0.1.0"
description = ""
authors = ["suesanjp <a.drop.of.my.essence@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
